# libpqxx-with-cmake-example

./: .gitignore  CMakeLists.txt  README.md
libpq-with-build/: CMakeLists.txt  README.md
libpq-without-build/: CMakeLists.txt  README.md  main.cpp
